--- a/docs/css/index_new.scss
+++ b/docs/css/index_new.scss
@@ -31,6 +31,7 @@ body {
   // overflow: hidden;
   box-sizing: border-box;
   position: relative;
+  background: url({{path}}/interim/indexHero.png) top center;
   > canvas {
     position: absolute;
     top: 0;
