--- a/client/landing/site.landing/styl/core.commons.styl
+++ b/client/landing/site.landing/styl/core.commons.styl
@@ -784,6 +784,32 @@ footer.main-footer
       .button-title
         font-weight         600
 
+.kdmodal.test-modal
+  width                     950px !important
+  height                    740px !important
+
+.kdmodal.test-modal .kdmodal-inner
+  height                    650px !important
+  .kdview.kdmodal-buttons
+    margin                  0px !important
+    abs                     0 0 20px 0
+    padding-top             10px
+    height                  42px !important
+
+  .kdmodal-content
+    margin-top              0px !important
+    height                  calc(100% \- 60px) !important
+
+.kdmodal.test-modal .kdmodal-inner
+  .kdview.kdmodal-buttons button.run-tests
+    background-color        #f2778a
+    span.button-title
+      color                 white
+      font-size             16px
+      line-height           20px
+      font-weight           500
+
+
 // Smartphones and tablets [Commons]
 @media only screen and (min-width : 320px) and (max-width : 1250px)
   .mobile-menu
@@ -809,3 +835,147 @@ footer.main-footer
 
   .koding-header-logo
     top                     32px
+
+
+.kdmodal.test-modal
+  #mocha-stats a, #mocha-report h1
+    font-size               18px
+    pointer-events          none
+    cursor                  default
+    color                   inherit
+    text-decoration         none
+    max-width               880px
+    text-overflow           ellipsis
+    overflow                hidden
+    white-space             nowrap
+    font-weight             bold
+
+   #mocha-stats
+     border-bottom          1px solid #ebebeb
+     padding                10px
+
+  #mocha-stats .progress
+     float                  right
+
+  #mocha-stats .progress > canvas
+     margin                 0 5px
+
+  #mocha-stats .passes, #mocha-stats .duration
+     margin-bottom          3px
+
+  #mocha-stats .failures, #mocha-stats .passes, #mocha-stats .duration
+     text-align             left
+     padding-left           10px
+
+  #mocha-stats .failures a
+     color                  #c0392b
+
+  #mocha-stats .passes a
+     color                  #27ae60
+
+  #mocha-stats .duration
+     color                  #2980b9
+
+  #mocha-stats .duration em
+     color                  black
+
+  #mocha-report
+    text-align              left
+    padding                 20px
+
+  #mocha-report .suite
+    margin-bottom           15px
+
+  #mocha-report > .suite > h1
+    display                 inherit
+    margin-bottom           20px
+    text-align              center
+    border-bottom           1px solid #ebebeb
+    padding-bottom          10px
+    a
+      font-weight           500 !important
+      font-size             24px !important
+      color                 #5e5e5e
+
+
+  #mocha-report h1 a
+    font-weight             600
+    font-size               18px
+    color                   #5e5e5e
+    text-decoration         none
+
+  #mocha-report .test
+    color                   gray
+    font-weight             300
+
+  #mocha-report .test.fail h2, #mocha-report .test.pass h2
+    text-decoration         none
+    color                   green
+
+  #mocha-report .test.fail h2
+    color                   #c0392b
+    font-weight             400
+
+  #mocha-report .test.fail pre.error
+    display                 none
+
+  #mocha-report .test
+    margin-left             10px
+
+  #mocha-report .duration
+    margin-left             5px
+
+  #mocha-report code
+    font-size               12px
+
+  .suite-results
+    height                  550px
+    width                   auto
+    overflow-y              scroll
+    padding-top             10px
+    text-align              left
+
+  .suite-results .suite
+    margin-bottom           10px
+
+  .suite-results .suite .file-name
+    font-size               24px
+    line-height             33px
+    color                   #5e5e5e
+
+  .suite-results .suite .suite-info-wrapper
+    display                 flex
+    margin-top              10px
+    margin-left             20px
+    font-size               14px
+    line-height             20px
+    font-weight             400
+
+  .suite-results .suite .suite-info-wrapper > label
+    display                 flex
+
+  .suite-results .suite .suite-info-wrapper > label::before
+    content                 ''
+    width                   6px
+    display                 block
+    position                relative
+    height                  6px
+    border-radius           50%
+    background-color        #b3b3b3
+    top                     3px
+    margin-right            10px
+
+  .suite-results .suite .suite-info-wrapper > label
+    margin-right            5px
+
+  .suite-results .suite .suite-info-wrapper > span
+    margin-right            10px
+
+  .suite-results .suite .suite-info-wrapper span.ni
+    color                   #f8903b
+
+  .suite-results .suite .suite-info-wrapper span.error
+    color                   #f2778a
+  .suite-results .suite .suite-info-wrapper span.hti
+    color                   #CA4A18
+
