landing: accept 2 digit year with special styling
Signed-off-by: Umut Sirin <umutsirin1@gmail.com>

--- a/client/landing/site.landing/styl/team.payment.styl
+++ b/client/landing/site.landing/styl/team.payment.styl
@@ -29,6 +29,17 @@ form.cc-form
     input
       background            #fff
 
+  .login-input-view.exp-year
+    &:before
+      content               '20'
+      abs                   26px 0 0 17px
+      display               block
+      z-index               2
+      font-size             18px
+      color                 rgba(0,0,0,.4)
+    input.kdinput.text
+      padding-left          38px
+
 .cc-form-resetLink a
   display                   block
   padding                   0 0 20px
