client: jekyll: contentwithvisual part removed/component improved

--- a/docs/_includes/home-contentwithvisual.html
+++ b/docs/_includes/home-contentwithvisual.html
@@ -8,7 +8,9 @@
 
     <img class='Homepage-ContentWithVisual--visual' src="{{ site.url }}{{ src }}.{{ ext }}" srcset="{{ site.url }}{{ src }}.{{ ext }} 1x, {{ site.url }}{{ src }}2x.{{ ext }} 2x" />
     <div class='Homepage-ContentWithVisual--content'>
+      {% if include.icon_src %}
       <img src="{{ site.url }}{{ include.icon_src }}">
+      {% endif %}
       <h3>{{ include.title }}</h3>
       <p>{{ include.description }}</p>
     </div>
