client: jekyll: home specific styles moved

--- a/docs/css/home.scss
+++ b/docs/css/home.scss
@@ -9,6 +9,8 @@
 @import "home/index-1200";
 @import "home/index-800";
 
+@import "home/common";
+
 @import "home/hero";
 @import "home/content-with-video";
 @import "home/columns";
