--- a/docs/_css/home/video-columns.scss
+++ b/docs/_css/home/video-columns.scss
@@ -32,6 +32,17 @@
     height: 212px;
     margin-bottom: 40px;
     cursor: pointer;
+    transition: transform .1s ease, box-shadow .1s ease;
+    border-radius: 5px;
+    overflow: hidden;
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 30px rgba(0,0,0,.5);
+      svg {
+        fill: #FFFFFF;
+      }
+    }
+
     &:before {
       content: '';
       display: block;
@@ -72,9 +83,6 @@
       height: 48px;
       margin-top: 18px;
       fill: #DEDEDE;
-    }
-    &:hover svg {
-      fill: #FFFFFF;
     }
   }
 }
