--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,6 +10,7 @@
     {% include head.html no_additions="yes"%}
     <style type="text/css">{% include css/reset.css %}</style>
     <link rel="stylesheet" href="{{ site.url }}/css/home.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/modal.css">
     <script async onload="try{Typekit.load();}catch(e){}" src="//use.typekit.com/fyu0jgv.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   </head>
