--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -3,8 +3,9 @@ main.Homepage-Hero {
   width: 100%;
   background-color: #000;
   position: relative;
+  background: #000 url('/assets/img/landing/home/hero-main.png') no-repeat 50% 0;
+  background-size: 1440px 710px;
 }
-
 .Homepage-Hero--container {
   padding-top: 265px;
   position: relative;
