add upload feature to readme

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -227,6 +227,13 @@ contentModal.styl
       bg                    color #fff
       padding-top           20px
       text-align            center
+      .button-float-left
+        float left
+        left 32px
+        
+      .button-float-right
+        float right
+        right 32px
 
       rel()
 
