--- a/client/ace/lib/styl/editor.styl
+++ b/client/ace/lib/styl/editor.styl
@@ -28,6 +28,19 @@ body.ace
         borderBox()
       ul
         margin-left       0
+        
+.ace_editor.uploading-files-drag
+  position relative
+  &:after
+    content ''
+    position absolute
+    top 0
+    left 10px
+    right 20px
+    bottom 0
+    border 2px dashed #a7cdff
+    z-index 99
+      
 
   .kdview.kdcontextmenu.kdbuttonmenu.editor-advanced-settings-menu.split-view-button
     .chevron-ghost-wrapper
