Integrations: Github: initial commit for integration settings for Github

--- a/client/home/lib/styl/homekodingutilities.styl
+++ b/client/home/lib/styl/homekodingutilities.styl
@@ -43,6 +43,7 @@ welcome.styl
 .HomeAppView--section.customer-feedback
 .HomeAppView--section.intercom-integration
 .HomeAppView--section.gitlab
+.HomeAppView--section.github
 .HomeAppView--section.koding-button
 .HomeAppView--section.permissions
   z-index                   1
