--- a/client/home/lib/styl/homeintegrations.styl
+++ b/client/home/lib/styl/homeintegrations.styl
@@ -1,6 +1,7 @@
 .HomeAppView--section.customer-feedback
 .HomeAppView--section.intercom-integration
 .HomeAppView--section.gitlab
+.HomeAppView--section.github
 
   .HomeAppView--sectionWrapper
     position                relative
