client: jekyll: main responsive styles updated

--- a/docs/_css/home/index-1200.scss
+++ b/docs/_css/home/index-1200.scss
@@ -1,7 +1,8 @@
-@media (max-width: 1199px) {
+@media (max-width: 1200px) {
 
-  .Homepage--container {
-    max-width: 734px;
+  .Homepage--containerOffset {
+    padding-right: 73px;
+    padding-left: 73px;
   }
 
 }
