--- a/docs/_css/home/index-1600.scss
+++ b/docs/_css/home/index-1600.scss
@@ -1,7 +1,8 @@
 @media (max-width: 1600px) {
 
-  .Homepage--container {
-    max-width: 995px;
+  .Homepage--containerOffset {
+    // padding-right: 40px;
+    // padding-left: 40px;
   }
 
 }
