--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -1,6 +1,5 @@
 main.Homepage-Hero {
   height: 710px;
-  width: 100%;
   background-color: #000;
   position: relative;
   background: #000 url('/assets/img/landing/home/hero-main.png') no-repeat 50% 0;
@@ -11,9 +10,8 @@ main.Homepage-Hero {
   position: relative;
   z-index: 1;
 }
-
 .Homepage-Hero--intro {
-  width: 850px;
+  max-width: 850px;
   margin: 0 auto;
   text-align: center;
   h1 {
@@ -25,18 +23,18 @@ main.Homepage-Hero {
   }
   h2 {
     font-size: 22.11px;
-    color: #BABABA;
+    color: #DDDDDD;
     margin-top: 26px;
     line-height: 1.4em;
     letter-spacing: -.1px;
     font-weight: 400;
   }
+  .actions {
+    margin-top: 40px;
+  }
   a {
-    &.cta {
-      margin: 40px 0 0;
-    }
     &.secondary {
-      margin: 0 20px 0 0;
+      margin: 0 20px 10px 0;
     }
     strong {
       font-weight: 600;
@@ -44,56 +42,39 @@ main.Homepage-Hero {
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 880px) {
+  .Homepage-Hero--intro {
+    h1 {
+      font-size: 32px;
+      line-height: 45px;
+    }
+  }
+}
+
+@media (max-width: 660px) {
   main.Homepage-Hero {
-    height: 413px;
+    height: 620px;
+  }
+  .Homepage-Hero--intro {
+    h1 {
+      font-size: 24px;
+      line-height: 34px;
+    }
+    h2 {
+      font-size: 18px;
+      margin-top: 16px;
+      line-height: 26px;
+    }
+    .actions {
+      margin-top: 97px;
+      a {
+        margin-right: 0;
+        display: block;
+        width: auto;
+      }
+    }
   }
   .Homepage-Hero--container {
-    padding-top: 52px;
-  }
-  .Homepage-Hero--intro {
-    width: 375px;
-    h1 {
-      font-size: 23px;
-      line-height: 33px;
-    }
-    h2 {
-      font-size: 16px;
-      line-height: 26px;
-      margin-top: 9px;
-    }
+    padding-top: 165px;
   }
 }
-
-@media (max-width: 768px) {
-  main.Homepage-Hero {
-    height: calc(100vh - 87px - 57px); /* 87 for header - 57 for cta */
-    max-height: 525px;
-    min-height: 200px;
-    background-image: linear-gradient(-180deg,#3C3C57 11%,#8598BE 100%);
-    position: static;
-  }
-  .Homepage--container.Homepage-Hero--container {
-    padding-top: 52px;
-    padding-left: 0;
-    max-width: 480px;
-    margin: 0 30px;
-    position: static;
-  }
-  .Homepage-Hero--intro {
-    width: 100%;
-    h1 {
-      font-size: 23px;
-      line-height: 33px;
-      max-width: 480px;
-    }
-    h2 {
-      font-size: 17px;
-      line-height: 26px;
-    }
-    a {
-      display: none;
-    }
-  }
-}
-
