--- a/docs/_css/home/index.scss
+++ b/docs/_css/home/index.scss
@@ -1,8 +1,11 @@
+.Homepage--containerOffset {
+  padding-right: 40px;
+  padding-left: 40px;
+}
 .Homepage--container {
   max-width: $content-width;
   margin: 0 auto;
 }
-
 .Homepage--mobile-cta {
   display: none;
   width: 100%;
@@ -25,7 +28,6 @@
     background: #FEBE30;
   }
 }
-
 a.cta {
   text-decoration: none;
   text-align: center;
@@ -44,11 +46,9 @@ a.cta {
     color: #727272;
   }
 }
-
 h3.title {
   font-size: 32px;
 }
-
 .center {
   text-align: center;
 }
