--- a/docs/css/home.scss
+++ b/docs/css/home.scss
@@ -5,9 +5,9 @@
 @import "base1";
 
 @import "home/index";
-@import "home/index-1600";
-@import "home/index-1200";
-@import "home/index-800";
+// @import "home/index-1600";
+// @import "home/index-1200";
+// @import "home/index-768";
 
 @import "home/common";
 
