--- a/docs/_includes/home/content-with-video.html
+++ b/docs/_includes/home/content-with-video.html
@@ -2,7 +2,7 @@
 {% assign img = include.img_src %}
 {% assign img2x = include.img2x_src %}
 
-<div class='Homepage-ContentWithVideo'>
+<div class='Homepage-ContentWithVideo Homepage--containerOffset'>
   <div class='Homepage--container'>
     <div class='Homepage-ContentWithVideo--content'>
       <h4 class="title">{{ include.heading }}</h4>
@@ -12,8 +12,10 @@
     </div>
     <div class='Homepage-ContentWithVideo--visual showModal' data-youtube-id="{{ include.video_id}}">
       <img src="{{ site.url }}{{ img }}" srcset="{{ site.url }}{{ img }} 1x, {{ site.url }}{{ img2x }} 2x" />
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><use xlink:href="#video-play-button"></use></svg>
-      <h4 class="title">{{ include.video_title }}</h4>
+      <h4 class="title">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><use xlink:href="#video-play-button"></use></svg>
+        {{ include.video_title }}
+      </h4>
     </div>
   </div>
 </div>
