client: jekyll: hero minor

--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -1,4 +1,4 @@
-<main class="Homepage-Hero">
+<main class="Homepage-Hero Homepage--containerOffset">
   <div class="Homepage--container Homepage-Hero--container">
     <div class="Homepage-Hero--intro">
       <h1>{{ include.h1 }}</h1>
