client: jekyll: hero image updated

--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -3,7 +3,7 @@ main.Homepage-Hero {
   background-color: #000;
   position: relative;
   background: #000 url('/assets/img/landing/home/hero-main.png') no-repeat 50% 0;
-  background-size: 1440px 710px;
+  background-size: cover;
 }
 .Homepage-Hero--container {
   padding-top: 265px;
