client: jekyll: hero minor href fix

--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -4,7 +4,7 @@
       <h1>{{ include.h1 }}</h1>
       <h2>{{ include.h2 }}</h2>
       <div class="actions">
-        <a class="cta secondary" href="{{ site.url }}/teams/create">Request a Demo</a>
+        <a class="cta secondary" href="{{ site.url }}/demo">Request a Demo</a>
         <a class="cta" href="{{ site.url }}/teams/create">Sign Up</a>
       </div>
     </div>
