client: jekyll: added open source link to footer

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -28,6 +28,7 @@
       <ul>
         <li><a href="{{ site.url }}/about">About Us</a></li>
         <li><a href="https://jobs.lever.co/koding" target='_blank'>Careers</a></li>
+        <li><a href="https://github.com/koding" target='_blank'>Open Source</a></li>
       </ul>
     </div>
     <div class="Footer--col">
