client: jekyll: icons converted to svg icon system

--- a/docs/_css/home/columns.scss
+++ b/docs/_css/home/columns.scss
@@ -15,7 +15,7 @@
   padding-left: 48px;
   position: relative;
   margin-bottom: 94px;
-  img {
+  svg {
     position: absolute;
     left: 0;
     top: 0;
