--- a/docs/_includes/home/columns.html
+++ b/docs/_includes/home/columns.html
@@ -5,12 +5,11 @@
   <div class='Homepage--container'>
   {% for col in cols %}
     {% assign row = col | split: "||" %}
-    {% assign img = row[0] | strip | prepend: path | prepend: site.url %}
-    {% assign img2x = img | replace: '.png', '@2x.png' %}
+    {% assign icon = row[0] | strip | prepend: 'icon-' %}
     {% assign title = row[1] | strip %}
     {% assign desc = row[2] | strip %}
     <div class='Homepage-Column'>
-      <img src="{{ img }}" srcset="{{ img }} 1x, {{ img2x | }} 2x" />
+      <svg xmlns="http://www.w3.org/2000/svg"><use xlink:href="#{{ icon }}"></use></svg>
       <h4 class="title">{{ title }}</h4>
       <p>{{ desc }}</p>
     </div>
