client: jekyll: minor css improvements

--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -23,7 +23,7 @@ main.Homepage-Hero {
   }
   h2 {
     font-size: 22.11px;
-    color: #DDDDDD;
+    color: rgba(255,255,255,0.8);
     margin-top: 26px;
     line-height: 1.4em;
     letter-spacing: -.1px;
