--- a/docs/_css/home/use-cases.scss
+++ b/docs/_css/home/use-cases.scss
@@ -1,5 +1,5 @@
 .Homepage-use-cases {
-  background-image: linear-gradient(-45deg, #2A3445 0%, #62476B 100%);
+  background-image: linear-gradient(45deg, #2A3445 0%, #62476B 100%);
   padding-top: 114px;
   padding-bottom: 80px;
   text-align: center;
@@ -22,7 +22,7 @@
   }
   h6 {
     font-size: 22px;
-    color: #989898;
+    color: rgba(255,255,255,0.6);
     line-height: 28px;
   }
   .actions {
