client: jekyll: header logo hover bg change supressed for all cases

--- a/docs/_includes/css/header.css
+++ b/docs/_includes/css/header.css
@@ -282,8 +282,8 @@ body {
   margin-top: 0px;
 }
 
-.StickyHeader .Homepage-Header a.logo:hover {
-  background-color: transparent;
+.Homepage-Header a.logo:hover {
+  background-color: transparent !important;
 }
 
 .Homepage-Header.light .spacer,
