Landing: Sign in with Github flow is ready for teams enabled integration

--- a/client/landing/site.landing/styl/team.styl
+++ b/client/landing/site.landing/styl/team.styl
@@ -270,6 +270,7 @@ body.teams #kdmaincontainer #main-tab-view
 
   // GITLAB STYLES
   .gitlab
+  .github
     > button.TeamsModal-button
       margin                25px auto !important
       background            #fff
@@ -333,6 +334,10 @@ body.teams #kdmaincontainer #main-tab-view
     &.gitlab
       .icon
         r-sprite              app 'icongitlab'
+
+    &.github
+      .icon
+        r-sprite              app 'icongithub'
 
     .icon
       display                 inline-block !important
