--- a/client/home/lib/styl/homemyaccount.styl
+++ b/client/home/lib/styl/homemyaccount.styl
@@ -300,6 +300,18 @@ Home My Account styles
         margin-top          12px
         fl()
 
+      .scope
+        background          #eee
+        color               #666
+        padding             1px 4px
+        position            absolute
+        right               130px
+        max-width           350px
+        overflow            hidden
+        text-overflow       ellipsis
+        white-space         nowrap
+        font-size           13px
+
       .integration-switch
         margin-top          10px
         fr()
