stack-editor: while viewing dont allow member to edit stack name

--- a/client/stack-editor/lib/styl/stackeditor.styl
+++ b/client/stack-editor/lib/styl/stackeditor.styl
@@ -602,3 +602,11 @@ $borderColor                = #E3E3E3
       outline               inherit
       bg                    color #FFFFFF
       border                1px solid $borderColor
+
+.StackEditorView--header-subHeader.readonly
+  div.buttons
+  a.custom-link-view
+    display                 none !important
+  .kdinput.text
+    opacity                 0.5
+
