--- a/client/stack-editor/lib/styl/stackeditorheader.styl
+++ b/client/stack-editor/lib/styl/stackeditorheader.styl
@@ -25,8 +25,4 @@ $borderColor                = #E3E3E3
 
 .StackEditorView--header.readonly
   .GenericButton.save-test
-  div.StackEditorView--header-subHeader
-    display                 none
-  input.kdinput.text
-    opacity                 0.5
-
+    display               none !important
