--- a/docs/_css/home/references.scss
+++ b/docs/_css/home/references.scss
@@ -12,15 +12,14 @@
       height: 80px;
       opacity: .5;
       transition: transform .2s ease, opacity .2s ease;
+      background-image: url('/assets/img/landing/references/default_user.svg');
+      background-size: cover;
       cursor: pointer;
+      border-radius: 50% 50%;
       &.active,
       &:hover {
         opacity: 1;
         transform: scale(1.25);
-      }
-      img {
-        width: 100%;
-        height: 100%;
       }
     }
   }
