client: jekyll: footer subscribe button fixed for responsive styles

--- a/docs/_includes/css/footer.css
+++ b/docs/_includes/css/footer.css
@@ -98,7 +98,7 @@ footer.Homepage-Footer form .btn {
     -webkit-appearance: none;
     background: #F2778A;
     border: 1px solid #F2778A;
-    padding: 0 25px;
+    padding: 13px 25px 12px;
     cursor: pointer;
     font-size: 16px;
     color: #FFFFFF;
