--- a/docs/_css/home/outro.scss
+++ b/docs/_css/home/outro.scss
@@ -25,7 +25,9 @@
       font-size: 16px;
     }
     a.cta {
-      width: 325px;
+      max-width: 325px;
+      display: block;
+      margin: 0 auto;
     }
   }
 }
