client: jekyll: minor use cases link styles

--- a/docs/_css/home/use-cases.scss
+++ b/docs/_css/home/use-cases.scss
@@ -47,6 +47,11 @@
     p {
       color: #AAB2B9;
       line-height: 26px;
+      a,
+      a:visited {
+        color: white;
+        text-decoration: none;
+      }
     }
   }
 }
