--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -228,11 +228,11 @@ contentModal.styl
       padding-top           20px
       text-align            center
       .button-float-left
-        float               left
+        fl()
         left                32px
         
       .button-float-right
-        float               right
+        fr()
         right                32px
 
       rel()
