--- a/client/stack-editor/lib/components/uploadfilebutton/styl/uploadbutton.styl
+++ b/client/stack-editor/lib/components/uploadfilebutton/styl/uploadbutton.styl
@@ -1,10 +1,8 @@
 .upload-file-button
   color           #848484
   font-size       12px
-  bottom          -70px
   letter-spacing  0.5px
-  position        absolute
-  left            25px
+  abs             0 0 -70px 25px
   background      #fff
   border          0
   &:active, &:focus
