improve readme upload code

--- a/client/ace/lib/styl/editor.styl
+++ b/client/ace/lib/styl/editor.styl
@@ -29,17 +29,17 @@ body.ace
       ul
         margin-left       0
         
-.ace_editor.files-being-dragged
+.kdview.files-being-dragged
     rel()
     pointer-events  none
     &:after
       content       ''
       position      absolute
-      abs           0 20px 0 10px
+      abs           0px 20px 0px 10px
       border        2px dashed #a7cdff
       z-index       99
       
-.ace_editor.uploading-files-drag *
+.kdview.uploading-files-drag *
     pointer-events  none
       
 
