upload button back to main view

--- a/client/stack-editor/lib/styl/stackeditor.styl
+++ b/client/stack-editor/lib/styl/stackeditor.styl
@@ -90,8 +90,9 @@ $borderColor                = #E3E3E3
 
   .stack-template-action-wrapper
   .readme-action-wrapper
-    abs                     0 120px 10px 0
+    abs                     0 0px 10px 0px
     button.kdbutton
+      abs                   0 120px 20px 0
       margin-right          20px
       border                0px
       background            #fff
