change button float left to use fl/fr

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -229,11 +229,11 @@ contentModal.styl
       bg                    color #fff
       padding-top           20px
       text-align            center
-      .button-float-left
+      .fl
         fl()
         left                32px
         
-      .button-float-right
+      .fr
         fr()
         right                32px
 
