Have text look bold, not look like a link

--- a/client/landing/site.landing/styl/team.creation.styl
+++ b/client/landing/site.landing/styl/team.creation.styl
@@ -14,7 +14,7 @@ team.group.creation.styl
   .kdtabpaneview .TeamsModal.TeamsModal--groupCreation
 
     > h5 i
-      color                 #56a2d3
+      font-weight           700
 
     .login-input-view
       rel()
