--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -1,5 +1,5 @@
-<main class="Homepage-Hero Homepage--containerOffset">
-  <div class="Homepage--container Homepage-Hero--container">
+<main class="Homepage-Hero">
+  <div class="Homepage--container Homepage-Hero--container Homepage--containerOffset">
     <div class="Homepage-Hero--intro">
       <h1>{{ include.h1 }}</h1>
       <h2>{{ include.h2 }}</h2>
@@ -8,6 +8,9 @@
         <a class="cta" href="{{ site.url }}/teams/create">Sign Up</a>
       </div>
     </div>
+  </div>
+  <div class="Homepage-Hero--banner Homepage--containerOffset">
+    <span class="alert">Developers!</span> <span class="bold">Koding is NOT an online IDE.</span> We are providing a modern dev environment for teams. <a href="#">Read more.</a>
   </div>
 </main>
 <a class='Homepage--mobile-cta' href='{{ site.url }}/demo'>REQUEST A DEMO</a>
