--- a/docs/_includes/home/columns.html
+++ b/docs/_includes/home/columns.html
@@ -8,10 +8,14 @@
     {% assign icon = row[0] | strip | prepend: 'icon-' %}
     {% assign title = row[1] | strip %}
     {% assign desc = row[2] | strip %}
+    {% assign link = row[3] | strip %}
+    {% assign linktext = row[4] | strip %}
+
     <div class='Homepage-Column'>
       <svg xmlns="http://www.w3.org/2000/svg"><use xlink:href="#{{ icon }}"></use></svg>
       <h4 class="title">{{ title }}</h4>
       <p>{{ desc }}</p>
+      <a href="{{ link }}">{{ linktext }}</a>
     </div>
   {% endfor %}
   </div>
